# security

./: .gitignore  AEGIS_CONTEXT.md  README.md  aegis_agent.spec  pyproject.toml  requirements.txt  start.bat  start_server.bat
agent/: cli.py  config.py  proxy.py  wrapper.py
agent/detectors/: __init__.py  agent_detector.py  workflow_tracker.py
agent/policies/: __init__.py  engine.py
agent/scanners/: __init__.py  autonomous_escrow.py  base.py  behavior.py  black_box_ledger.py  code_checker.py  data_flow.py  hallucination.py  injection.py  pii_scanner.py  response_safety.py  thinking_monitor.py  vibe_code_scanner.py  vpi.py
agent/store/: __init__.py  audit.py  local_db.py
agent_app/: __main__.py  cli.py  launcher.py  requirements.txt  service.py  tray.py  webview_ui.py
backend/: config.py  database.py  main.py  models.py
backend/middleware/: auth.py
backend/routes/: agents.py  auth.py  billing.py  downloads.py  logs.py  scanner_features.py
downloads/: aegis-cli.pyz
rules/: agent_behavior.json  dangerous_code.json  data_endpoints.json  injection_patterns.json  pii_patterns.json  thinking_patterns.json  vulnerability_patterns.json
scripts/: build_linux.sh  build_macos.sh  build_windows.bat  build_zipapp.py  installer_windows.iss
static/: app.html  index.html
tests/: test_scanners.py
