[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "aegis"
version = "1.0.0"
description = "AI Security & Governance Layer — Monitor, Verify, Protect"
authors = [{ name = "Aegis Team" }]
license = { text = "Proprietary" }
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "rich>=13.7.0",
    "cryptography>=41.0.0",
    "PyJWT>=2.8.0",
    "pyyaml>=6.0",
    "typer>=0.9.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.25.0",
    "sqlalchemy>=2.0.25",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic[email]>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://aegis.security"

[tool.setuptools.packages.find]
include = ["agent*", "backend*"]
